--- a/angularProject/src/app/app.component.html
+++ b/angularProject/src/app/app.component.html
@@ -5,8 +5,11 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="">Home</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" [hidden]="isConnected()">
         <a class="nav-link" routerLink="login">Login</a>
+      </li>
+      <li class="nav-item" [hidden]="!isConnected()">
+        <a class="btn nav-link" (click)="logout()">Deconnexion</a>
       </li>
     </div>
 
