--- a/angularProject/src/app/app.component.html
+++ b/angularProject/src/app/app.component.html
@@ -11,6 +11,9 @@
       <li class="nav-item" [hidden]="!isConnected()">
         <a class="btn nav-link" (click)="logout()">Deconnexion</a>
       </li>
+      <li class="nav-item" [hidden]="isConnected()">
+        <a class="btn nav-link" routerLink="register">Register</a>
+      </li>
     </div>
 
   </nav>
