--- a/angularProject/src/app/app.component.html
+++ b/angularProject/src/app/app.component.html
@@ -14,6 +14,9 @@
       <li class="nav-item" [hidden]="isConnected()">
         <a class="btn nav-link" routerLink="register">Register</a>
       </li>
+      <li class="nav-item" [hidden]="!isConnected()">
+        <a class="btn nav-link" routerLink="addSession">Ajouter une session</a>
+      </li>
     </div>
 
   </nav>
