--- a/angularProject/src/app/create-session/create-session.component.html
+++ b/angularProject/src/app/create-session/create-session.component.html
@@ -1,17 +1,20 @@
 <div>
-  <form (ngSubmit)="onSubmit(form)" #form="ngForm">
-    <p>
-      <label for="nomSession_id">Nom de Session:</label>
-      <input type="text" name="nomSession" id="nomSession_id" ngModel required>
-    </p>
-    <p>
-      <label for="enonce_id">Enoncé :</label>
-      <input type="text" name="enonce" id="enonce_id" ngModel required>
-    </p>
-    <p>
-      <label for="deadline_id">Deadline :</label>
-      <input type="date" name="deadline" id="deadline_id" ngModel required>
-    </p>
-    <p><button type="submit" class="btn btn-success" [disabled]="form.invalid">Envoyer</button></p>
+  <form (ngSubmit)="onSubmit(form)" #form="ngForm" class="login">
+    <div class="form-group">
+        <label for="nomSession_id">Nom de Session :</label>
+        <input class="form-control" type="text" name="nomSession" id="nomSession_id" ngModel required>
+    </div>
+    <div class="form-group">
+        <label for="enonce_id">Enoncé :</label>
+        <textarea class="form-control" id="enonce_id" name="enonce" ngModel required
+                  rows="3" cols="50" maxlength=512></textarea>
+    </div>
+
+    <div class="form-group">
+        <label for="deadline_id">Deadline :</label>
+        <input class="form-control" type="date" name="deadline" id="deadline_id" ngModel required>
+    </div>
+
+    <div class="text-center"><button type="submit" class="btn btn-success" [disabled]="form.invalid">Envoyer</button></div>
   </form>
 </div>
