--- a/angularProject/src/app/register/register.component.html
+++ b/angularProject/src/app/register/register.component.html
@@ -1,21 +1,21 @@
 <div>
-  <form (ngSubmit)="onSubmit(form)" #form="ngForm">
-    <p>
+  <form (ngSubmit)="onSubmit(form)" #form="ngForm" class="login">
+    <div class="form-group">
       <label for="login_id">Login:</label>
-      <input type="text" name="login" id="login_id" ngModel required>
-    </p>
-    <p>
+      <input class="form-control" type="text" name="login" id="login_id" ngModel required>
+    </div>
+    <div class="form-group">
       <label for="nom_id">Nom :</label>
-      <input type="text" name="nom" id="nom_id" ngModel required>
-    </p>
-    <p>
+      <input class="form-control" type="text" name="nom" id="nom_id" ngModel required>
+    </div>
+    <div class="form-group">
       <label for="prenom_id">Prenom :</label>
-      <input type="text" name="prenom" id="prenom_id" ngModel required>
-    </p>
-    <p>
+      <input class="form-control" type="text" name="prenom" id="prenom_id" ngModel required>
+    </div>
+    <div class="form-group">
       <label for="password_id">Mot de passe:</label>
-      <input type="password" name="password" id="password_id" ngModel required>
-    </p>
-    <p><button type="submit" class="btn btn-success" [disabled]="form.invalid">Envoyer</button></p>
+      <input class="form-control" type="password" name="password" id="password_id" ngModel required>
+    </div>
+    <div class="text-center"><button type="submit" class="btn btn-success" [disabled]="form.invalid">Envoyer</button></div>
   </form>
 </div>
