--- a/angularProject/src/styles.css
+++ b/angularProject/src/styles.css
@@ -1,1 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+.content {
+  margin: auto;
+}
+
+.login{
+  display: block;
+  padding: 20px;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -60%);
+  width: 500px;
+  background: #fafafa;
+  box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.2)
+}
+
+.form {
+  margin: 25px auto;
+  position: relative;
+  top: auto;
+  left: auto;
+  transform: none;
+  overflow: auto;
+}
+
+.login>fieldset {
+  padding: 8px 3px;
+}
+
+textarea {
+  resize: none;
+}
+
+input[type=file] {
+  overflow: hidden;
+}
+
+.loginLink {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
