début table + get files from db

--- a/angularProject/src/styles.css
+++ b/angularProject/src/styles.css
@@ -42,3 +42,6 @@ input[type=file] {
   justify-content: space-between;
   align-items: center;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
