--- a/angularProject/src/app/upload/upload.component.html
+++ b/angularProject/src/app/upload/upload.component.html
@@ -33,6 +33,7 @@
     >
       <li class="list-group-item">
         <span>{{ file.name }}</span>
+        <button (click)="deleteFile(file.name)" class="btn btn-danger">Supprimer le fichier</button>
       </li>
     </ul>
   </div>
