--- a/angularProject/src/app/home/home.component.html
+++ b/angularProject/src/app/home/home.component.html
@@ -1,37 +1,15 @@
-<table class="table table-bordered">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">Login</th>
-      <th scope="col">Nom</th>
-      <th scope="col">Prénom</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let user of users">
-      <td>
-        {{user.login}}
-      </td>
-      <td>
-        {{user.nom}}
-      </td>
-      <td>
-        {{user.prenom}}
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-<ul class="nav">
+<ul class="nav nav-tabs">
   <li class="nav-item">
-    <button (click)="changeState('outdated')">Ancienne Session</button>
+    <a class="nav-link" [class.active]="state=='outdated'" role="tab" (click)="changeState('outdated')">Anciennes Sessions</a>
   </li>
   <li class="nav-item">
-    <button (click)="changeState('logged')">Session en cours</button>
+    <a class="nav-link" [class.active]="state=='logged'" (click)="changeState('logged')">Sessions en cours</a>
   </li>
   <li class="nav-item">
-    <button (click)="changeState('available')">Session disponible</button>
+    <a class="nav-link" [class.active]="state=='available'" (click)="changeState('available')">Sessions disponibles</a>
   </li>
 </ul>
+
 
 <div *ngIf="this.state == 'available'">
 <app-sessions *ngFor="let s of sessions" [session]="s" (join)="joinSession($event)"></app-sessions>
