--- a/angularProject/src/app/upload/upload.component.css
+++ b/angularProject/src/app/upload/upload.component.css
@@ -2,3 +2,15 @@ span + button {
   margin-left: 100px;
 }
 
+.file-item {
+  display: flex;
+  align-items: center;
+}
+
+.file-button {
+  margin: 5px 10px 5px auto;
+}
+
+.file-button > .btn-success {
+  margin-right: 5px;
+}
