--- a/angularProject/src/styles.css
+++ b/angularProject/src/styles.css
@@ -45,3 +45,7 @@ input[type=file] {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+i {
+  vertical-align: middle;
+}
