--- a/angularProject/src/app/charts/charts.component.html
+++ b/angularProject/src/app/charts/charts.component.html
@@ -1,4 +1,4 @@
-<highcharts-chart
+<highcharts-chart *ngIf="isUpToBeDisplayed==1"
   [Highcharts]="highcharts"
   [options]="chartOptions"
   style="width: 100%; height: 400px; display: block;"
