ajout de messages de feedback sur le logon et la création de session. Correction de quelque bugs et de CSS. Ajout du component alert pour les feedback

--- a/angularProject/src/app/gauge/gauge.component.html
+++ b/angularProject/src/app/gauge/gauge.component.html
@@ -53,7 +53,8 @@
       [thick]="15"
       [max]="performance.time"
       [cap]="'round'"
-      [foregroundColor]="'#f39c12'">
+      [foregroundColor]="'#f39c12'"
+      [append]="'S'">
     </ngx-gauge>
   </div>
 </div>
