--- a/angularProject/src/app/app.component.html
+++ b/angularProject/src/app/app.component.html
@@ -9,20 +9,25 @@
       <nav class="navbar navbar-expand navbar-dark bg-dark">
         <a href="#" class="navbar-brand">Project</a>
         <div class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="">Home</a>
+          <li class="nav-item" [hidden]="!isConnected()">
+            <a class="nav-link" routerLink="">Accueil</a>
           </li>
           <li class="nav-item" [hidden]="isConnected()">
-            <a class="nav-link" routerLink="login">Login</a>
-          </li>
-          <li class="nav-item" [hidden]="!isConnected()">
-            <a class="btn nav-link" (click)="logout()">Deconnexion</a>
+            <a class="nav-link" routerLink="login">Se connecter</a>
           </li>
           <li class="nav-item" [hidden]="isConnected()">
-            <a class="btn nav-link" routerLink="register">Register</a>
+            <a class="btn nav-link" routerLink="register">S'inscrire</a>
           </li>
-          <li class="nav-item" [hidden]="!isConnected()">
+          <li class="nav-item" [hidden]="!isConnected() || isAdmin == 0">
             <a class="btn nav-link" routerLink="addSession">Ajouter une session</a>
+          </li>
+        </div>
+        <div class="navbar-nav">
+          <li class="nav-item" [hidden]="!isConnected()">
+            <a class="btn nav-link" routerLink=""><i class="material-icons">account_circle</i> {{login}}</a>
+          </li>
+          <li class="nav-item" [hidden]="!isConnected()">
+            <a class="btn nav-link" (click)="logout()"><i class="material-icons">exit_to_app</i> Deconnexion</a>
           </li>
         </div>
 
