--- a/angularProject/src/app/create-session/create-session.component.html
+++ b/angularProject/src/app/create-session/create-session.component.html
@@ -18,3 +18,4 @@
     <div class="text-center"><button type="submit" class="btn btn-success" [disabled]="form.invalid">Envoyer</button></div>
   </form>
 </div>
+<app-alert *ngIf="success" [type]="'success'" [message]="'La session a bien été créée !'"></app-alert>
