--- a/angularProject/src/app/outdated-session/outdated-session.component.html
+++ b/angularProject/src/app/outdated-session/outdated-session.component.html
@@ -2,7 +2,7 @@
   <div class="card-header">{{session.nomSession}} (id : {{session.idSession}})</div>
   <div class="card-body">
     <p>{{session.enonce}}</p>
-    <p>S'est terminé le {{session.deadline}}</p>
+    <p>S'est terminé le {{session.getSessionDate()}} à {{session.getSessionHours()}}</p>
     <button class="btn btn-primary" [routerLink] = "['/session', session.idSession]">Afficher les détails</button>
     <!--<button (click)="quitSession()" class="btn btn-danger">Quitter la session</button>-->
 
