--- a/angularProject/src/app/upload/upload.component.css
+++ b/angularProject/src/app/upload/upload.component.css
@@ -1,7 +1,3 @@
-span + button {
-  margin-left: 100px;
-}
-
 .file-item {
   display: flex;
   align-items: center;
@@ -13,4 +9,13 @@ span + button {
 
 .file-button > .btn-success {
   margin-right: 5px;
+}
+
+.file-input {
+  display: flex;
+  align-items: center;
+}
+
+label.btn-default {
+  margin-bottom: 0;
 }
