--- a/angularProject/src/app/home/home.component.html
+++ b/angularProject/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link" [class.active]="state=='outdated'" role="tab" (click)="changeState('outdated')">Anciennes Sessions</a>
+    <a class="nav-link" [class.active]="state=='outdated'" (click)="changeState('outdated')">Anciennes Sessions</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" [class.active]="state=='logged'" (click)="changeState('logged')">Sessions en cours</a>
