--- a/angularProject/src/app/profil/profil.component.html
+++ b/angularProject/src/app/profil/profil.component.html
@@ -1,1 +1,36 @@
-<p *ngIf="user">{{user.login}}</p>
+<div *ngIf="user" class="page-content page-container" id="page-content">
+  <div class="padding">
+    <div class="d-flex justify-content-center">
+      <div class="col-xl-6 col-md-12">
+        <div class="card user-card-full">
+          <div class="row m-l-0 m-r-0">
+            <div class="col-sm-4 bg-c-lite-green user-profile">
+              <div class="card-block text-center text-white">
+                <div class="m-b-25"> <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div>
+                <h6 class="f-w-600">{{user.prenom}} {{user.nom}}</h6>
+              </div>
+            </div>
+            <div class="col-sm-8">
+              <div class="card-block">
+                <h6 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h6>
+                <div class="row">
+                  <div class="col-sm-6">
+                    <p class="m-b-10 f-w-600">Login</p>
+                    <h6 class="text-muted f-w-400">{{user.login}}</h6>
+                  </div>
+                </div>
+                <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Modifications</h6>
+                <div class="row">
+                  <div class="col-sm-6">
+                    <a role="button" class="btn btn-primary" href="index.php?controller=utilisateur&action=update">Modifier le mot de passe</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
