add user manager component

--- a/angularProject/src/app/app.component.html
+++ b/angularProject/src/app/app.component.html
@@ -24,10 +24,13 @@
           <li class="nav-item" [hidden]="!isConnected() || isAdmin == 0">
             <a class="btn nav-link" routerLink="manageSession">Gérer les sessions</a>
           </li>
+          <li class="nav-item" [hidden]="!isConnected() || isAdmin == 0">
+            <a class="btn nav-link" routerLink="users">Gérer les Utilisateurs</a>
+          </li>
         </div>
         <div class="navbar-nav">
           <li class="nav-item" [hidden]="!isConnected()">
-            <a class="btn nav-link" routerLink=""><i class="material-icons">account_circle</i> {{login}}</a>
+            <a class="btn nav-link" routerLink="profil"><i class="material-icons">account_circle</i> {{login}}</a>
           </li>
           <li class="nav-item" [hidden]="!isConnected()">
             <a class="btn nav-link" (click)="logout()"><i class="material-icons">exit_to_app</i> Deconnexion</a>
