--- a/angularProject/src/app/modify-session/modify-session.component.html
+++ b/angularProject/src/app/modify-session/modify-session.component.html
@@ -15,9 +15,9 @@
       <input class="form-control" type="datetime-local" name="deadline" id="deadline_id" value="{{this.session.deadline}}" [(ngModel)]="session.deadline" required>
     </div>
 
-    <div class="form-group">
-      <label for="disabled_id">Désactivé :</label>
-      <input type="checkbox" id="disabled_id" name="disabled" [checked]="this.session.disabled" [(ngModel)]="session.disabled">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="disabled_id" name="disabled" [checked]="this.session.disabled" [(ngModel)]="session.disabled">
+      <label class="form-check-label" for="disabled_id">Désactivé</label>
 
     </div>
 
