--- a/angularProject/src/app/user-manager/user-manager.component.html
+++ b/angularProject/src/app/user-manager/user-manager.component.html
@@ -1,3 +1,7 @@
 <div *ngFor="let user of users">
   <p>{{user.login}}</p>
+  <div *ngIf="!user.isAccept">
+    <button (click)="acceptUser(user.login)" class="btn btn-success">Accepter Utilisateur</button>
+    <button (click)="denieUser(user.login)" class="btn btn-danger">Refuser Utilisateur</button>
+  </div>
 </div>
