--- a/angularProject/src/app/app.component.html
+++ b/angularProject/src/app/app.component.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined|Material+Icons+Sharp" rel="stylesheet">
+<!--    <script src="https://kit.fontawesome.com/29189c846f.js" crossorigin="anonymous"></script>-->
   </head>
   <body>
     <div>
