--- a/angularProject/src/app/user-manager/user-manager.component.html
+++ b/angularProject/src/app/user-manager/user-manager.component.html
@@ -1,7 +1,10 @@
-<div *ngFor="let user of users">
+<div class="user" *ngFor="let user of users">
   <p>{{user.login}}</p>
-  <div *ngIf="!user.isAccept">
-    <button (click)="acceptUser(user.login)" class="btn btn-success">Accepter Utilisateur</button>
-    <button (click)="denieUser(user.login)" class="btn btn-danger">Refuser Utilisateur</button>
+  <p>{{user.isAdmin}}</p>
+  <div class="boutton">
+    <button *ngIf="user.isAdmin == 1 && user.isAccept" class="btn btn-primary"><i class="material-icons">verified_user</i> Administrateur</button>
+    <button *ngIf="user.isAdmin == 0 && user.isAccept" class="btn btn-success"><i class="material-icons">emoji_events</i> Promouvoir</button>
+    <button *ngIf="!user.isAccept" (click)="acceptUser(user.login)" class="btn btn-success"><i class="material-icons">check_circle</i> Accepter Utilisateur</button>
+    <button *ngIf="!user.isAccept" (click)="denieUser(user.login)" class="btn btn-danger"><i class="material-icons">cancel</i> Refuser Utilisateur</button>
   </div>
 </div>
