--- a/angularProject/src/styles.css
+++ b/angularProject/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~font-awesome/css/font-awesome.css';
 .content {
   margin: auto;
 }
@@ -47,5 +48,9 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 i {
-  vertical-align: middle;
+  vertical-align: sub;
+}
+
+.material-icons {
+  font-size: 20px;
 }
