--- a/angularProject/src/app/user-manager/user-manager.component.html
+++ b/angularProject/src/app/user-manager/user-manager.component.html
@@ -1,9 +1,8 @@
 <div class="user" *ngFor="let user of users">
-  <p>{{user.login}}</p>
-  <p>{{user.isAdmin}}</p>
+  <p><a [routerLink]="['/profil',user.login]">{{user.login}}</a></p>
   <div class="boutton">
-    <button *ngIf="user.isAdmin == 1 && user.isAccept" class="btn btn-primary"><i class="material-icons">verified_user</i> Administrateur</button>
-    <button *ngIf="user.isAdmin == 0 && user.isAccept" class="btn btn-success"><i class="material-icons">emoji_events</i> Promouvoir</button>
+    <button *ngIf="user.isAdmin == 1 && user.isAccept" (click)="demote(user.login)" class="btn btn-primary"><i class="material-icons">verified_user</i> Administrateur</button>
+    <button *ngIf="user.isAdmin == 0 && user.isAccept" (click)="promote(user.login)" class="btn btn-success"><i class="material-icons">emoji_events</i> Promouvoir</button>
     <button *ngIf="!user.isAccept" (click)="acceptUser(user.login)" class="btn btn-success"><i class="material-icons">check_circle</i> Accepter Utilisateur</button>
     <button *ngIf="!user.isAccept" (click)="denieUser(user.login)" class="btn btn-danger"><i class="material-icons">cancel</i> Refuser Utilisateur</button>
   </div>
