--- a/angularProject/src/app/register/register.component.html
+++ b/angularProject/src/app/register/register.component.html
@@ -13,9 +13,14 @@
       <input class="form-control" type="text" name="prenom" id="prenom_id" ngModel required>
     </div>
     <div class="form-group">
+      <label for="prenom_id">Email :</label>
+      <input class="form-control" type="email" name="email" id="email_id" ngModel required>
+    </div>
+    <div class="form-group">
       <label for="password_id">Mot de passe:</label>
       <input class="form-control" type="password" name="password" id="password_id" ngModel required>
     </div>
     <div class="text-center"><button type="submit" class="btn btn-success" [disabled]="form.invalid">Envoyer</button></div>
   </form>
 </div>
+<app-alert *ngIf="badLogin" [type]="'danger'" [message]="'Un utilisateur avec ce login exite déjà !'"></app-alert>
