ajout excel + début send mail (bug)

--- a/angularProject/src/app/scoreboard/scoreboard.component.css
+++ b/angularProject/src/app/scoreboard/scoreboard.component.css
@@ -5,3 +5,12 @@
 mat-form-field {
   margin-top: 15px;
 }
+
+.excel {
+  margin: 10px 10px 10px auto;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+}
