--- a/angularProject/src/app/scoreboard/scoreboard.component.html
+++ b/angularProject/src/app/scoreboard/scoreboard.component.html
@@ -1,7 +1,10 @@
-<mat-form-field>
-  <mat-label>Rechercher</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input >
-</mat-form-field>
+<div class="header">
+  <mat-form-field>
+    <mat-label>Rechercher</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input autocomplete="off">
+  </mat-form-field>
+  <button class="excel btn btn-success" (click)="dlExcel()"><i class="material-icons">get_app</i> Télécharger au format excel</button>
+</div>
 
 <div class="mat-elevation-z8">
 
