--- a/angularProject/src/app/app.component.html
+++ b/angularProject/src/app/app.component.html
@@ -8,7 +8,7 @@
   <body>
     <div>
       <nav class="navbar navbar-expand navbar-dark bg-dark">
-        <a href="#" class="navbar-brand">Project</a>
+        <a routerLink="/" class="navbar-brand">Dashboard</a>
         <div class="navbar-nav mr-auto">
           <li class="nav-item" [hidden]="!isConnected()">
             <a class="nav-link" routerLink="">Accueil</a>
