--- a/angularProject/src/app/create-session/create-session.component.html
+++ b/angularProject/src/app/create-session/create-session.component.html
@@ -15,6 +15,11 @@
         <input class="form-control" type="datetime-local" name="deadline" id="deadline_id" ngModel required>
     </div>
 
+    <div class="form-group">
+      <label for="argument_id">Argument d'exécution :</label>
+      <input class="form-control" type="text" name="argument" id="argument_id" ngModel required>
+    </div>
+
     <div class="text-center"><button type="submit" class="btn btn-success" [disabled]="form.invalid">Envoyer</button></div>
   </form>
 </div>
