--- a/angularProject/src/app/modify-session/modify-session.component.html
+++ b/angularProject/src/app/modify-session/modify-session.component.html
@@ -15,6 +15,11 @@
       <input class="form-control" type="datetime-local" name="deadline" id="deadline_id" value="{{this.session.deadline}}" [(ngModel)]="session.deadline" required>
     </div>
 
+    <div class="form-group">
+      <label for="argument_id">Argument d'exécution :</label>
+      <input class="form-control" type="text" name="argument" id="argument_id" value="{{this.session.argument}}" [(ngModel)]="session.argument" required>
+    </div>
+
     <div class="form-check">
       <input class="form-check-input" type="checkbox" id="disabled_id" name="disabled" [checked]="this.session.disabled" [(ngModel)]="session.disabled">
       <label class="form-check-label" for="disabled_id">Désactivé</label>
