--- a/angularProject/src/app/profil/profil.component.html
+++ b/angularProject/src/app/profil/profil.component.html
@@ -25,12 +25,12 @@
                     <h6 class="text-muted f-w-400">{{user.email}}</h6>
                   </div>
                 </div>
-                <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600" *ngIf="login == userLogin">Modifications</h6>
-                <div class="row" *ngIf="login == userLogin">
-                  <div class="col-sm-6">
-                    <a role="button" class="btn btn-primary" href="">Modifier le mot de passe</a>
-                  </div>
-                </div>
+<!--                <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600" *ngIf="login == userLogin">Modifications</h6>-->
+<!--                <div class="row" *ngIf="login == userLogin">-->
+<!--                  <div class="col-sm-6">-->
+<!--                    <a role="button" class="btn btn-primary" href="">Modifier le mot de passe</a>-->
+<!--                  </div>-->
+<!--                </div>-->
               </div>
             </div>
           </div>
